[package]
name = "rust-ftp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
strum = "0.24"
strum_macros = "0.24"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
env_logger = "0.9.0"
paste = "1.0.7"
portpicker = "0.1.1"